--- a/src/Wikibird/Views/HomePage/Edit.cshtml
+++ b/src/Wikibird/Views/HomePage/Edit.cshtml
@@ -8,6 +8,7 @@
 
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/wymeditor/jquery.wymeditor.pack.js")" type="text/javascript"></script>
 
 @using (Html.BeginForm()) {
     @Html.ValidationSummary(true)
@@ -18,7 +19,7 @@
             @Html.LabelFor(model => model.Title)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Title)
+            @Html.TextBoxFor(model => model.Title, new { style= "width:100%" })
             @Html.ValidationMessageFor(model => model.Title)
         </div>
 
@@ -31,7 +32,7 @@
         </div>
 
         <p>
-            <input type="submit" value="Save" />
+            <input type="submit" value="Save" class="wymupdate"/>
         </p>
     </fieldset>
 }
