--- a/src/Wikibird/Views/Shared/_Layout.cshtml
+++ b/src/Wikibird/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <script src="@Url.Content("~/Scripts/jquery-1.4.4.min.js")" type="text/javascript"></script>
 </head>
 
-<body>
+<body style="width:800px;margin-left:auto;margin-right:auto">
     @RenderBody()
 </body>
 </html>
